<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>ch.scaille</groupId>
		<artifactId>skylib-starter-parent</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath />
	</parent>
	<artifactId>libs</artifactId>
	<version>${revision}</version>
	<name>libs</name>
	<packaging>pom</packaging>
	<modules>
		<module>lib-testing</module>
		<module>lib-annotations</module>
		<module>lib-utils</module>
		<module>lib-javabeans</module>
		<module>lib-persistence</module>
		<module>lib-gui</module>
		<module>lib-gui-generators</module>
		<module>lib-gui-validation</module>
		<module>lib-gui-examples</module>
		<module>lib-generator-utils</module>
	</modules>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-versions</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.7</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>${java.version}</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
		</dependency>
	</dependencies>
	
</project>